--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.14.2",
+    "@ark-ui/react": "^5.5.0",
+    "@chakra-ui/react": "^3.15.1",
     "@emotion/react": "^11.14.0",
     "@types/next": "^8.0.7",
+    "axios": "^1.8.4",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
